<resources>
    <string name="app_name">Pintusa</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="mahasiswa">MAHASISWA</string>
    <string name="satpam">SATPAM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar">Daftar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="jadwal">Jadwal</string>
    <string name="tentang">Tentang</string>
    <string name="bantuan">Bantuan</string>
</resources>
