<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_jadwal"
            android:icon="@drawable/ic_date_range"
            android:title="@string/jadwal" />
        <item
            android:id="@+id/nav_tentang"
            android:icon="@drawable/ic_info"
            android:title="@string/tentang" />
        <item
            android:id="@+id/nav_bantuan"
            android:icon="@drawable/ic_help"
            android:title="@string/bantuan" />
    </group>

</menu>
