<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.daftar.Daftar">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_left"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/daftar_akun_baru"
            android:textSize="24sp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999999"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <Button
        android:id="@+id/btnMahasiswa"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector"
        android:text="@string/mahasiswa"
        android:textSize="18sp"
        android:textColor="@color/selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintRight_toLeftOf="@id/btnSatpam"/>
    <Button
        android:id="@+id/btnSatpam"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:text="@string/satpam"
        android:textSize="18sp"
        android:textColor="@color/selector"
        android:background="@drawable/selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toRightOf="@id/btnMahasiswa"/>
    <FrameLayout
        android:id="@+id/frameContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnSatpam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>